# simple-rag-system

./: .env.example  .gitignore  README.md  docker  docker-compose.yml  main.py  pyproject.toml  requirements.txt
src/: document_loader.py  llm_client.py  main.py  rag_system.py  vector_db.py
ui/: streamlit_app.py
